--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Solo. The best and free website for exploring music online. 100% fre😍😎😎🥰🥰😘😛</title>
   <script src="script.js" defer></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <link rel="stylesheet" href="sys.css" />
   <link rel="icon" href="Copilot_20250628_195908.png" type="image/png" />
   <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
@@ -495,6 +496,7 @@
         <input type="checkbox" name="" id="checkk">
         <label for="checkk" class="opt">(optional) it's okay to send email with SOLO. update, tips and special offers. You can opt out at any time </label>
       </div>
+      <div class="g-recaptcha" data-sitekey="6Ld4BsQrAAAAABod1VX8PX5Ygk42y1kxMLHqXXzI"></div>
       <div class="input-box">
         <button type="submit" class="submit"><span>Register</span></button>
       </div>
@@ -553,7 +555,7 @@
 </footer>
 
 <audio id="bg-music" autoplay loop>
-  <source src="WhatsApp Audio 2025-09-09 at 15.40.55 (online-audio-converter.com).mp3" type="audio/mpeg">
+  <source src="WhatsApp Ptt 2025-09-09 at 01.01.14 (online-audio-converter.com).mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
@@ -572,4 +574,3 @@
 
 </body>
 </html>
-
